# Graystone

./: .gitignore  ARCHITECTURE.md  BUILD.bat  MAKE-RELEASE.bat  README.md  ROADMAP.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-windows.yml  ci.yml  deploy-web.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
engine/: Cargo.toml
engine/graystone_ai_bridge/: Cargo.toml
engine/graystone_ai_bridge/src/: lib.rs
engine/graystone_ast/: Cargo.toml
engine/graystone_ast/src/: lib.rs
engine/graystone_backup/: Cargo.toml
engine/graystone_backup/src/: lib.rs
engine/graystone_build/: Cargo.toml
engine/graystone_build/src/: lib.rs
engine/graystone_core/: Cargo.toml
engine/graystone_core/src/: frb_generated.rs  lib.rs
engine/graystone_core/src/api/: engine.rs  mod.rs
engine/graystone_cst/: Cargo.toml
engine/graystone_cst/src/: lib.rs
engine/graystone_diff/: Cargo.toml
engine/graystone_diff/src/: lib.rs
engine/graystone_index/: Cargo.toml
engine/graystone_index/src/: lib.rs
engine/graystone_license/: Cargo.toml
engine/graystone_license/src/: lib.rs
engine/graystone_logs/: Cargo.toml
engine/graystone_logs/src/: lib.rs
engine/graystone_patch/: Cargo.toml
engine/graystone_patch/src/: lib.rs
engine/graystone_policy/: Cargo.toml
engine/graystone_policy/src/: lib.rs
engine/graystone_profiles/: Cargo.toml
engine/graystone_profiles/src/: lib.rs
engine/graystone_project_scan/: Cargo.toml
engine/graystone_project_scan/src/: lib.rs
engine/graystone_readme/: Cargo.toml
engine/graystone_readme/src/: lib.rs
engine/graystone_restore/: Cargo.toml
engine/graystone_restore/src/: lib.rs
engine/graystone_search/: Cargo.toml
engine/graystone_search/src/: lib.rs
engine/graystone_update/: Cargo.toml
engine/graystone_update/src/: lib.rs
installer/: graystone.iss  install.ps1  uninstall.ps1
lib/: app.dart  main.dart
lib/models/: connection.dart
lib/screens/: api_keys_screen.dart  asar_tools_screen.dart  chat_screen.dart  connection_edit_screen.dart  connections_screen.dart  file_manager_screen.dart  home_screen.dart  language_installer_screen.dart  manager_screen.dart  settings_screen.dart  splash_screen_manager.dart  updater_screen.dart
lib/services/: bat_service.dart  engine_service.dart  llm_client.dart  store.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  (+1 more)
lib/widgets/: common.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/installer/: Graystone.iss
windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
